--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
+    "chart.js": "^4.4.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
