--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^20",
